End Of Section two

--- a/NZWalks/NZWalks.API/appsettings.json
+++ b/NZWalks/NZWalks.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "NZWalks": "server=.;database=NZWalksDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
